Changed some things, fixed word-wrap and aligning problems with hero text, fixed cross-browser spacing problems

--- a/css/animated-headlines.css
+++ b/css/animated-headlines.css
@@ -6,7 +6,7 @@
 .cd-words-wrapper b {
   display: inline-block;
   position: absolute;
-  white-space: nowrap;
+  white-space: normal;
   left: 0;
   top: 0;
 }
